# anyllm

./: CLAUDE.md  PRD.md  README.md  pyproject.toml  validate_step1.py  validate_step2_3.py  validate_step4.py  validate_step5.py
anyllm/: __init__.py  gateway.py  interceptors.py
anyllm/adapters/: __init__.py  anthropic.py  base.py  gemini.py  openai_chat.py
anyllm/capabilities/: __init__.py  matrix.py
anyllm/conversion/: __init__.py  converter.py  lowering.py
anyllm/schema/: __init__.py  content.py  message.py  request.py  response.py  stream.py  tools.py  usage.py  warnings.py
docs/: adapters.md  architecture.md  capabilities.md  gateway.md  index.md  interceptors.md  quickstart.md  uir-reference.md  warnings.md
example/: 01_convert_openai_to_anthropic.py  02_step_by_step_conversion.py  03_uir_with_tools.py  04_custom_interceptor.py  05_gateway_convert_only.py  06_gateway_call_api.py  07_gateway_stream_events.py
