[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anyllm"
version = "0.1.0"
description = "Provider-neutral LLM gateway core library with UIR and adapters for OpenAI Chat, Anthropic, and Gemini"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AnyLLM Contributors" },
]
keywords = [
    "llm",
    "gateway",
    "adapter",
    "openai",
    "anthropic",
    "gemini",
    "google",
    "pydantic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.7,<3",
    "ruff>=0.15.12",
]

[project.optional-dependencies]
# Optional runtime dependency for provider HTTP calls and image URL resolution.
http = [
    "httpx>=0.27,<1",
]
# Development dependencies (lint, tests, packaging).
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.5,<1",
    "build>=1.2,<2",
]
# Install all optional dependencies.
all = [
    "httpx>=0.27,<1",
]

[project.urls]
Homepage = "https://github.com/yang208115/AnyLLM"
Documentation = "https://github.com/yang208115/AnyLLM#readme"
Repository = "https://github.com/yang208115/AnyLLM"
Issues = "https://github.com/yang208115/AnyLLM/issues"

[tool.hatch.build.targets.wheel]
packages = ["anyllm"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["anyllm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
